apps/dssp-jsp-demo-27-01/dev/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: dssp-jsp-demo-27-01
#   namespace: dev
#   labels:
#     app: dssp-jsp-demo-27-01
#     backstage.io/kubernetes-id: dssp-jsp-demo-27-01
#     environment: dev
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: dssp-jsp-demo-27-01
#   template:
#     metadata:
#       labels:
#         app: dssp-jsp-demo-27-01
#         backstage.io/kubernetes-id: dssp-jsp-demo-27-01
#         environment: dev
#     spec:
#       containers:
#         - name: dssp-jsp-demo-27-01
#           image: chaitanyapandeygspann/dssp-jsp-demo-27-01:1.0.1
#           ports:
#             - containerPort: 8080
#           env:
#             - name: APP_ENV
#               value: "dev"



apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-jsp-demo-27-01
  namespace: dev
  labels:
    app: dssp-jsp-demo-27-01
    backstage.io/kubernetes-id: dssp-jsp-demo-27-01
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-jsp-demo-27-01
  template:
    metadata:
      labels:
        app: dssp-jsp-demo-27-01
        backstage.io/kubernetes-id: dssp-jsp-demo-27-01
        environment: dev
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: dssp-jsp-demo-27-01
          image: chaitanyapandeygspann/dssp-jsp-demo-27-01:1.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
              ephemeral-storage: "50Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
